--- a/js-features/cookie-clicker/task.html
+++ b/js-features/cookie-clicker/task.html
@@ -23,6 +23,12 @@
                 <div class="clicker__status">
                     Всего кликов <span id="clicker__counter">0</span>
                 </div>
+                <div class="clicker__speed">
+                    Кликов/сек <span id="clicker__speed">0</span>
+                </div>
+                <div class="clicker__speed">
+                    Рекорд кликов/сек <span id="speed__record">0</span>
+                </div>
                 <img 
                     src="https://i.postimg.cc/T1bWdf2y/1024px-Pepperidge-Farm-Nantucket-Cookie.jpg" 
                     alt=""
