--- a/client-state/auth/task.html
+++ b/client-state/auth/task.html
@@ -36,7 +36,11 @@
             </div>
             <div class="welcome" id="welcome">
                 Добро пожаловать, пользователь #<span id="user_id"></span>
+                <div class="row">
+                    <button class="btn" id="logout__btn">Выйти</button>
+                </div>
             </div>
+            
         </div>
         </main>
     <script src="task.js"></script>
